[PRM-666] Outdated and Vulnerable Dependencies for ehr-transfer-service (#286)